# basic_neural_network

./: helper.py  mnist_loader.py  network.py  network2.py  pyproject.toml  test_network.ipynb
