[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["literalnoodles <nexus190494@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"
numpy = "^1.22.4"
pandas = "^1.4.2"
scipy = "^1.8.1"
scikit-learn = "^1.1.1"
seaborn = "^0.11.2"
cupy-cuda11x = "^11.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
